syntax = "proto3";

package city;

service CityService {
    rpc GetCity(CityRequest) returns (City) {}
    rpc ListCities(CityRequest) returns (stream City) {}
}

message CityRequest {
    int32 id = 1;
    string name = 2;
    string country = 3;
}

message City {
    int64 id = 1;
    string name = 2;
    string findName = 3;
    string country = 4;
    double lat = 5;
    double lon = 6;
}